fix: Fix custom select on mobile

--- a/src/components/ConnectExchangeView/ExchangeAccountBalanceManagement/BalanceManagement/BalanceManagement.scss
+++ b/src/components/ConnectExchangeView/ExchangeAccountBalanceManagement/BalanceManagement/BalanceManagement.scss
@@ -22,7 +22,6 @@
     }
 
     .searchRoot {
-      margin-right: 0;
       width: 216px;
     }
   }
