--- a/src/components/CustomFilters/CustomFilters.scss
+++ b/src/components/CustomFilters/CustomFilters.scss
@@ -50,29 +50,15 @@
       }
 
       label {
-        margin: 5px 0;
-
-        > span {
-          display: none;
-        }
+        display: none;
       }
 
       .customSelect {
         align-items: flex-start;
         flex-direction: column;
         height: fit-content;
-        margin-bottom: 10px;
+        margin: 5px 0 10px;
         width: 48%;
-
-        // .callout {
-        //   + span {
-        //     margin-bottom: 5px;
-        //     order: 1;
-        //     padding-right: 5px;
-        //     text-align: center;
-        //     width: 100%;
-        //   }
-        // }
       }
 
       .select,
